github_data_collector/src/data/issue_comment/plu_pxctest.txt

I tried pxctest on Xcode 9 beta and I get  "Abort trap: 6" on every command. 

```
cbennett-70ap:iOSxm8 i58288$ sudo xcode-select -s ../../.././../../../../Applications/Xcode-beta.app/Contents/Developer/
Password:
cbennett-70ap:iOSxm8 i58288$ pxctest     run-tests     --destination 'name=iPad Air 2,os=iOS 10.3'     --testrun build/Products/iOSxm8_iphonesimulator11.0-x86_64.xctestrun
Abort trap: 6
cbennett-70ap:iOSxm8 i58288$ pxctest     run-tests     --destination 'name=iPad Air 2,os=iOS 11.0'     --testrun build/Products/iOSxm8_iphonesimulator11.0-x86_64.xctestrun
Abort trap: 6
cbennett-70ap:iOSxm8 i58288$ pxctest run-tests --help
Abort trap: 6
cbennett-70ap:iOSxm8 i58288$ 
```

Any support for Xcode beta? 

![screen shot 2017-08-17 at 3 41 32 pm](https://user-images.githubusercontent.com/586919/29435041-a4968b92-8362-11e7-816b-95b10c26e51c.png)

Is it possible to generate a .plist file with the test results instead of junit/xml file.?

```
➜  github brew install pxctest                     
Updating Homebrew...
==> Installing pxctest from plu/pxctest
==> Cloning https://github.com/plu/pxctest.git
Updating /Users/dmytrogolub/Library/Caches/Homebrew/pxctest--git
==> Checking out tag 0.3.3
==> ./scripts/build.sh /usr/local/Cellar/pxctest/0.3.3/libexec
Last 15 lines from /Users/dmytrogolub/Library/Logs/Homebrew/pxctest/01.build.sh:
           ^
/tmp/pxctest-20170507-41569-1606bgn/PXCTestKit/Extension/String+PXCTestKit.swift:9:8: error: could not build Objective-C module 'CommonCrypto'
import CommonCrypto
       ^

** BUILD FAILED **


The following build commands failed:
	CompileSwift normal x86_64 /tmp/pxctest-20170507-41569-1606bgn/PXCTestKit/Reporter/TestReporter.swift
	CompileSwift normal x86_64 /tmp/pxctest-20170507-41569-1606bgn/PXCTestKit/Command/RunTests/RunTestsReporters.swift
	CompileSwift normal x86_64 /tmp/pxctest-20170507-41569-1606bgn/PXCTestKit/Command/RunTests/RunTestsPartitionManager.swift
	CompileSwift normal x86_64 /tmp/pxctest-20170507-41569-1606bgn/PXCTestKit/FileReader.swift
	CompileSwiftSources normal x86_64 com.apple.xcode.tools.swift.compiler
(5 failures)

If reporting this issue please do so at (not Homebrew/brew or Homebrew/core):
https://github.com/plu/homebrew-pxctest/issues
```

the failure seems to be happening due to the following line in _module.modulemap_ of _CommonCrypto.framework_ 

```
module CommonCrypto [system] {
    header "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/CommonCrypto/CommonCrypto.h"
    export *
}
```
I have few versions of Xcode installed and none of them is in _Applications_ folder. Changing the path to my Xcode location fixed the problem. 
Not sure how to fix it for any Xcode location. 
Anyone seeing this issue?, my simulators are boots however the test never starts. 

Error Domain=com.facebook.FBSimulatorControl Code=0 "Timed out waiting for all required services [com.apple.SpringBoard, com.apple.medialibraryd, com.apple.backboardd, com.apple.mobile.installd, com.apple.SimulatorBridge] to start" UserInfo={NSLocalizedDescription=Timed out waiting for all required services [com.apple.SpringBoard, com.apple.medialibraryd, com.apple.backboardd, com.apple.mobile.installd, com.apple.SimulatorBridge] to start}
Has anyone used partition? if so, is it working fine?I would also like to implement splitting my scheme into 2 simulators, I am using a different way but I think this would be easier.
I have a config like below:



```
rm -rf /tmp/IS24_PR/test-simulators
mkdir /tmp/IS24_PR/test-simulators
```

```
pxctest boot-simulators \
--deviceset /tmp/IS24_PR/test-simulators \
--destination 'name=iPhone 7,os=iOS 10.3' \
--destination 'name=iPhone 6,os=iOS 9.3'
```

```
pxctest run-tests \
--testrun /tmp/IS24_PR/derivedData/Build/Intermediates/CodeCoverage/Products/ImmoScout24-Alpha_iphonesimulator10.3-x86_64.xctestrun \
--deviceset /tmp/IS24_PR/test-simulators \
--destination 'name=iPhone 7,os=iOS 10.3' \
--destination 'name=iPhone 6,os=iOS 9.3' \
--only 'ImmoScout24-AlphaTests'
```

It can run quite well for some time. But then I got this error.

`NSUnderlyingError=0x7f91bc001b40 {Error Domain=com.apple.CoreSimulator.SimError Code=163 "Unable to boot device because it cannot be located on disk." UserInfo={NSLocalizedRecoverySuggestion=Use the device manager in Xcode or the simctl command line tool to either delete the device properly or erase contents and settings., NSLocalizedDescription=Unable to boot device because it cannot be located on disk., NSLocalizedFailureReason=The device's data is no longer present at /path/to/device`

Do you have any idea how to fix it?
These two work fine:

```
$ pxctest boot-simulators --destination "name=iPhone 7,os=iOS 10.3 --deviceset /tmp/test-simulators"
$ pxctest boot-simulators --destination "name=iPhone 6s,os=iOS 9.3 --deviceset /tmp/test-simulators"
```

These two don't:

```
$ pxctest boot-simulators --destination "name=iPhone 6,os=iOS 8.4 --deviceset /tmp/test-simulators"
$ pxctest boot-simulators --destination "name=iPhone 6,os=iOS 8.3 --deviceset /tmp/test-simulators"
```

They both end up with the following error:

> Timed out waiting for all required services [com.apple.SpringBoard, com.apple.medialibraryd, com.apple.backboardd, com.apple.mobile.installd, com.apple.SimulatorBridge] to start

```
$ xcodebuild -version
Xcode 8.3.2
Build version 8E2002

$ sw_vers
ProductName:	Mac OS X
ProductVersion:	10.12
BuildVersion:	16A323
```
Using this 
pxctest \
    run-tests \
    --destination 'name=iPad Air,os=iOS 10.2' \
    --destination 'name=iPad Air,os=iOS 10.2' \
    --testrun "/Users/username/Library/Developer/Xcode/DerivedData/MyApp-erqmuczdcogowjdmkomhdxdfgnfa/Build/Intermediates/CodeCoverage/Products/MyApp_iphonesimulator10.2-x86_64.xctestrun"

I see more than 5 simulator opening and it keeps opening more, I have to kill command line to stop it.